# Benchmarking-Batch-Invariance-In-LLM

./: .gitignore  pyproject.toml
notebooks/: a100_default_vs_tm.ipynb  graph.ipynb
src/batch_invariance_bench/: __main__.py  engine.py  io.py  metrics.py  runner.py  score.py
src/batch_invariance_bench/common/: csvio.py  env.py  gpu.py  sampling.py
src/batch_invariance_bench/correctness/: runner.py  schema.py  score.py
src/batch_invariance_bench/engines/: __init__.py  _fxpr_plugin.py  base.py  default.py  fxpr.py  tm_batch_invariant.py  vllm_base.py  vllm_default.py  vllm_fxpr.py  vllm_tm_batch_invariant.py
src/batch_invariance_bench/perf/: __main__.py  batch_sampler.py  configs.py  io.py  llmperf_runner.py  load_test.py  log_parse.py  profile.py  runner.py  schema.py  server.py  vram.py
src/batch_invariance_bench/tasks/: __init__.py  aime.py  base.py  ifeval.py  math500.py
